--- a/package.json
+++ b/package.json
@@ -8,7 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.31",
+    "@fortawesome/free-solid-svg-icons": "^5.15.0",
+    "@fortawesome/vue-fontawesome": "^2.0.0",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "autoprefixer": "^9",
     "core-js": "^3.6.5",
+    "node-sass": "^6.0.1",
+    "postcss": "^7",
+    "sass": "^1.44.0",
+    "sass-loader": "10.1.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -18,6 +28,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "vue-cli-plugin-fontawesome": "~0.3.1",
+    "vue-cli-plugin-tailwind": "~2.2.17",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
